cm4all-workshop (6.10) unstable; urgency=low

  * workshop: create session cgroups
  * cron: check the translation status for HTTP jobs
  * pond: truncate long lines before sending to Pond

 --   

cm4all-workshop (6.9) unstable; urgency=low

  * spawn: fix assertion failure with large payloads
  * spawn: fix hanging main process after spawner failure
  * translation: add packet REAL_UID_GID
  * switch to C++23
  * require Meson 1.2

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Apr 2025 12:01:37 +0200

cm4all-workshop (6.8) unstable; urgency=low

  * translation: allow BIND_MOUNT from container
  * translation: add packet BIND_MOUNT_FILE_EXEC

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Feb 2025 20:29:02 +0100

cm4all-workshop (6.7) unstable; urgency=low

  * cron: improve schedule parser error message
  * cron: case-insensitive month/day name parser
  * spawn: allow HOME inside a BIND_MOUNT
  * translation: add packet BIND_MOUNT_RW_EXEC

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 Feb 2025 08:31:58 +0100

cm4all-workshop (6.6) unstable; urgency=low

  * translation: add packets TMPFS_DIRS_READABLE, SYMLINK

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 Feb 2025 08:37:20 +0100

cm4all-workshop (6.5) unstable; urgency=low

  * spawn: forbid the "listmount" and "statmount" system calls

 -- Max Kellermann <mk@cm4all.com>  Mon, 09 Dec 2024 17:42:38 +0100

cm4all-workshop (6.4) unstable; urgency=low

  * qmqp: fix buffer overflow in netstring header parser
  * spawn: mount `proc` with "hidepid=1,subset=pid"
  * cron: do not log "lost race to schedule job" by default

 -- Max Kellermann <mk@cm4all.com>  Wed, 27 Nov 2024 16:17:16 +0100

cm4all-workshop (6.3) unstable; urgency=low

  * spawn: fix 6.2 regressions

 -- Max Kellermann <mk@cm4all.com>  Thu, 21 Nov 2024 15:48:43 +0100

cm4all-workshop (6.2) unstable; urgency=low

  * spawn: do not log "failed to kill: No such process"
  * translation: add packets CAP_SYS_RESOURCE, CHROOT
