@@ -1,6 +1,8 @@
 cm4all-workshop (6.10) unstable; urgency=low
 
   * workshop: create session cgroups
+  * workshop: do not override the translation server's cgroup settings for
+    "spawn"
   * cron: check the translation status for HTTP jobs
   * pond: truncate long lines before sending to Pond
 
